fix: remove linebreaks in <code>

--- a/src/style/highlight.styl
+++ b/src/style/highlight.styl
@@ -4,6 +4,7 @@ code
     color: #000;
     padding: .25em .5em;
     border-radius: .25em;
+    hyphens: manual;
 
 .hljs 
     background-color: #eee;
